<?xml version="1.0"?>
<package>

  <name>joystick</name>
  <version>0.1.0</version>
  <description>Get joystick signals from topside, multiplex to channels.</description>
  <maintainer email="peter@gmail.com">peter</maintainer>
  <maintainer email="hakongimse@gmail.com">Haakon Gimse</maintainer>
  <license>MIT</license>
  <url type="website">http://vortexntnu.no/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>maelstrom_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>maelstrom_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>

</package>
