<?xml version="1.0"?>
<package>
  <name>bluetooth</name>
  <version>0.0.0</version>
  <description>The bluetooth package</description>
  <author email="vegardkamsvaag@gmail.com">Vegard Kamsvåg</author>
  <maintainer email="vegardkamsvaag@gmail.com">Vegard Kamsvåg</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
