<?xml version="1.0"?>
<package>

  <name>hw_interface</name>
  <version>0.0.0</version>
  <description>Package to controll the hardware:
set PWM and read sensors</description>

  <maintainer
email="oystein.havsatd@gmail.com">havstad</maintainer>

  <license>MIT</license>

  <url type="website">http://vortexntnu.no/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>vortex_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>



  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>vortex_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>


</package>
