<?xml version="1.0"?>
<package>
  <name>manipulator</name>
  <version>0.0.0</version>
  <description>The manipulator node package</description>
  <maintainer email="hakongimse@gmail.com">hawkon</maintainer>
  <license>MIT</license>
  <url type="website">http://vortexntnu.no/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>vortex_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>vortex_msgs</run_depend>
</package>
