<?xml version="1.0"?>

<package>
    <name>pwm_interface</name>
    <version>0.0.0</version>
    <description>This package provides an interface for the PCA9685 PWM module.</description>
    <maintainer email="sindrehansen92@gmail.com">Sindre Hansen</maintainer>
    <license>MIT</license>
    <url type="website">http://vortexntnu.no</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>
    <build_depend>vortex_msgs</build_depend>
    <build_depend>roslint</build_depend>

    <run_depend>rospy</run_depend>
    <run_depend>vortex_msgs</run_depend>
</package>
