<?xml version="1.0"?>
<package>
  <name>sensor_interface</name>
  <version>0.0.0</version>
  <description>The sensor_interface package</description>

  <maintainer email="sindrhan@stud.ntnu.no">Sindre Hansen</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>vortex_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>joystick</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>rosserial_arduino</run_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>joystick</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>vortex_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
